# analyse_de_sentiment_api

./: README.md  api.py  app_streamlit.py  pyproject.toml  requirements.txt  test_api_negatif.py  test_api_positif.py
.github/workflows/: deploy.yml
mlflow_model/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
script/: download_data.py
tests/: test_app.py
