[project]
name = "analyse-de-sentiment-api"
version = "0.1.0"
description = ""
authors = [
    {name = "david",email = "david.marivat-larose@orange.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.48.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "mlflow (>=3.3.2,<4.0.0)",
    "opencensus (>=0.11.4,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
