[project]
name = "analyse-de-sentiment-api"
version = "0.1.0"
description = ""
authors = [
    {name = "david",email = "david.marivat-larose@orange.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.48.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "mlflow (>=3.3.2,<4.0.0)",
    "opencensus (>=0.11.4,<0.12.0)",
    "opencensus-ext-azure (>=1.1.15,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "opentelemetry-sdk (>=1.36.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.57b0,<0.58)",
    "azure-monitor-opentelemetry-exporter (>=1.0.0b41,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

